<resources>
    <string name="app_name"></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    //iniciar y cerrar sesion
    <string name="action_login">Iniciar Sesion</string>
    <string name="action_logout">Cerrar Session</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valnavhomefragment">Home</string>

    <string name="valetemail">Ingrese su Email</string>
    <string name="valetpassword">Ingrese Password</string>
    <string name="valbtnlogin">Iniciar Sesión</string>
    <string name="valchkguardardatos">¿Guardar Datos?</string>
    <string name="valbtnregistrarme">Registrate</string>
    <string name="valnavmapsfragment">Mapa</string>


    <string name="tvtituloregistro">REGISTRARME</string>
    <string name="valetnomusuario">Ingrese su nombre</string>
    <string name="valetapeusuario">Ingrese su apellido</string>
    <string name="valetemailusuario">Ingrese su email</string>
    <string name="valetcelusuario">Ingrese su celular</string>
    <string name="valetdni">Ingrese su dni</string>
    <string name="valetpassreg">Ingrese su password</string>
    <string name="valetrepassreg">ingresar su Direccion</string>
    <string name="valetdireccion">ingresar su direccion</string>
    <string name="valbtnirlogin">VOLVER A LOGIN</string>

    <string name="valbtnregvoluntario">REGISTRAR</string>
    <string name="valbtnregistro">REGISTRAR USUARIO</string>
    <string name="valcodigoverificador">Ingrese su Codigo Verificador</string>
    <string name="text_vacio"></string>

    <string name="valbtnValidarcodigo">VALIDAR CODIGO</string>
    <string name="valbtnaddcar">Add Cart</string>

    //total de carrito
    <string name="valtvsubtotal">TOTAL: </string>
    <string name="valbtncomprar">COMPRAR </string>

    //Ventas
    <string name="valtvtitulo">CHECKOUT </string>

</resources>